# fwd

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  MODULE.bazel.local.example  README.md  dpdk.MODULE.bazel  dpdk.json  generate_compile_commands.py  generate_dpdk_config.py  main.cc  verify_dpdk_json.cc
.github/: copilot-instructions.md
bitmap_slab/: BUILD  bitmap_slab.h  bitmap_slab_test.cc
config/: BUILD  config_parser.cc  config_parser.h  config_parser_test.cc  config_printer.cc  config_printer.h  config_printer_test.cc  config_validator.cc  config_validator.h  config_validator_test.cc  dpdk_config.h  dpdk_initializer.cc  dpdk_initializer.h  dpdk_port.cc  dpdk_port.h  pmd_thread.cc  pmd_thread.h  pmd_thread_manager.cc  pmd_thread_manager.h  port_manager.cc  port_manager.h
control/: BUILD  command_api.h  command_handler.cc  command_handler.h  command_handler_test.cc  control_plane.cc  control_plane.h  signal_handler.cc  signal_handler.h  unix_socket_server.cc  unix_socket_server.h
dpdk/: BUILD.bazel
fib/: BUILD  fib_loader.cc  fib_loader.h  fib_loader_test.cc  ipv4_test_fib.txt
fwdcli/: BUILD  go.mod  main.go
fwdcli/client/: BUILD  client.go  client_test.go
fwdcli/cmd/: BUILD  commands.go  fib.go  flows.go  monitor.go  proc_stats.go  root.go  sessions.go  show.go  shutdown.go  stats.go  status.go  threads.go
fwdcli/formatter/: BUILD  formatter.go  formatter_test.go
indirect_table/: BUILD  functors.h  indirect_table.h  indirect_table_compile_test.cc  indirect_table_pbt.cc  indirect_table_test.cc  key_entry.h  slot_array.h  slot_array_test.cc  value_slot.h
patches/: BUILD  rapidcheck_build.patch
processor/: BUILD  five_tuple_forwarding_processor.cc  five_tuple_forwarding_processor.h  five_tuple_forwarding_processor_test.cc  lpm_forwarding_processor.cc  lpm_forwarding_processor.h  packet_processor_base.h  packet_stats.h  pmd_job.h  pmd_job_test.cc  processor_context.h  processor_registry.cc  processor_registry.h  simple_forwarding_processor.cc  simple_forwarding_processor.h  tbm_forwarding_processor.cc  tbm_forwarding_processor.h  tbm_forwarding_processor_test.cc
rcu/: BUILD  deferred_work_item.h  intrusive_rcu_list.h  intrusive_rcu_list_test.cc  mpsc_queue.h  mpsc_queue_test.cc  pmd_retire_state.h  rcu_manager.cc  rcu_manager.h  rcu_retire.h
rxtx/: BUILD  allocator.h  batch.h  batch_result.h  batch_test.cc  f14_lookup_table.h  f14_lookup_table_test.cc  f14_map.h  f14_map_test.cc  f14_simd.h  f14_simd_test.cc  fast_lookup_table.h  fast_lookup_table_test.cc  hex_packet.h  list_slab.h  list_slab_test.cc  lookup_entry.h  packet.h  packet_metadata.cc  packet_metadata.h  packet_metadata_test.cc  packet_test.cc  rcu_hash_table.h  rcu_hash_table_test.cc  test_packet_builder.h  test_packet_data.h  test_utils.h
session/: BUILD  session_entry.h  session_key.h  session_table.cc  session_table.h  session_table_test.cc
tbm/: BUILD  tbmlib.h  test.c
tests/: __init__.py  conftest.py  debug_test.py  pytest.ini  requirements.txt
tests/docs/: TESTING_GUIDE.md  VERIFICATION_SUMMARY.md
tests/e2e/: __init__.py  test_control_plane.py  test_fib_info.py  test_five_tuple_forwarding.py  test_lpm_forwarding.py  test_multi_config.py  test_packet_stats.py  test_pmd_threads.py  test_process_lifecycle.py  (+1 more)
vm_location/: BUILD  tunnel_info.h  vm_location_key.h  vm_location_table.h
(+89 files in other folders)
