# MODULE.bazel

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rapidcheck", version = "2023.12.14")

# The BCR rapidcheck BUILD.bazel globs "include/**/*.cpp" which matches nothing,
# and Bazel 9 defaults allow_empty=False for globs, causing a build error.
# This patch removes that empty glob pattern.
single_version_override(
    module_name = "rapidcheck",
    patches = ["//patches:rapidcheck_build.patch"],
    patch_strip = 1,
)

