# MODULE.bazel

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rapidcheck", version = "2023.12.14")

# The BCR rapidcheck BUILD.bazel globs "include/**/*.cpp" which matches nothing,
# and Bazel 9 defaults allow_empty=False for globs, causing a build error.
# This patch removes that empty glob pattern.
single_version_override(
    module_name = "rapidcheck",
    patches = ["//patches:rapidcheck_build.patch"],
    patch_strip = 1,
)

# Go toolchain for fwdcli
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//fwdcli:go.mod")
use_repo(go_deps, "com_github_spf13_cobra")

# DPDK local repository
# Default location: /usr/local (common for system-wide DPDK installs)
# Override this in MODULE.bazel.local for machine-specific paths
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "dpdk",
    path = "/usr/local",
    build_file = "//dpdk:BUILD.bazel",
)

