# DPDK local repository configuration
# Copy this file to MODULE.bazel.local and customize the path for your machine.
# The .local file is gitignored and won't be committed.

# Example for /usr/local installation (default):
# new_local_repository(
#     name = "dpdk",
#     path = "/usr/local",
#     build_file = "//dpdk:BUILD.bazel",
# )

# Example for custom installation:
# new_local_repository(
#     name = "dpdk",
#     path = "/opt/dpdk",
#     build_file = "//dpdk:BUILD.bazel",
# )
